--- a/src/assets/i18n/th_TH.json
+++ b/src/assets/i18n/th_TH.json
@@ -1,5 +1,6 @@
 {
   "home": {
+    "lang":"th",
     "home":"หน้าหลัก",
     "client":"ไคลเอนต์",
     "whitepaper":"สมุดปกขาว",
@@ -51,7 +52,10 @@
     "thirdStage_date":"ไตรมาสที่หนึ่ง ของปีพ. ศ. 2562",
     "fourthStage_text_1":"เพิ่มประสิทธิภาพบริการด้านการแปลงสกุลเงินและการซื้อขายรวมทั้งปรับปรุงขั้นตอนการใช้และขอบเขตของบัตรเครดิตสกุลเงินดิจิทัล",
     "fourthStage_text_2":"สำรวจและร่วมมือกับสถาบันการเงินของธนาคารเพื่อจัดหาบริการที่เป็นนวัตกรรมใหม่ ๆ เพื่อสร้างแพลตฟอร์มเพื่อเชื่อมต่อกับธนาคารระบบการชำระเงินและบุคลากร",
-    "fourthStage_date":"ไตรมาสที่สองของปี 2019 และต่อๆไป"
+    "fourthStage_date":"ไตรมาสที่สองของปี 2019 และต่อๆไป",
+    "imgPhoneComputer":"/assets/img/img_phone_computer_th.png",
+    "imgCard":"/assets/img/img_card_th.png",
+    "imgPhone":"/assets/img/img_phone_th.png"
   },
   "team": {
     "title":"มืออาชีพทุ่มเทและทุ่มเทพิทักษ์เพื่อกระเป๋าบัตรช้างมงคล",
@@ -67,7 +71,8 @@
   },
   "client":{
     "ios":"ดาวน์โหลด iOS แบบ Enterprise Editio",
-    "android":"ดาวน์โหลดเวอร์ชัน Android"
+    "android":"ดาวน์โหลดเวอร์ชัน Android",
+    "tip":"鼠标移至对应的按钮上，扫描对应二维码下载"
   },
   "contact":{
     "title":"เราอยู่เคียงข้างคุณ",
