--- a/src/assets/i18n/th_TH.json
+++ b/src/assets/i18n/th_TH.json
@@ -72,7 +72,7 @@
   "client":{
     "ios":"ดาวน์โหลด iOS แบบ Enterprise Editio",
     "android":"ดาวน์โหลดเวอร์ชัน Android",
-    "tip":"鼠标移至对应的按钮上，扫描对应二维码下载"
+    "tip":"เลื่อนเมาส์ไปที่ปุ่มที่เกี่ยวข้องและสแกนบาร์โค้ดที่ต้องการดาวน์โหลด"
   },
   "contact":{
     "title":"เราอยู่เคียงข้างคุณ",
